Changelog
=========


1.1.4 (unreleased)
------------------

- Adjusts the formatting of the date and time displayed on the page of a news item.
  Time doesn't show up if it is set to 00:00.
  [raphael-s]

- Call news_listing view on NewsListingBlock and optain query from block for news listing.
  [mathias.leimgruber]


1.1.3 (2016-04-20)
------------------

- Adjusts the date and time displayed for each news item in a news folder.
  Doesnt show time if there is no time set.
  [raphael-s]
  
- Adds a profile which installs an additional feature allowing to
  mark news item to be shown on the homepage (if the news listing block
  is configured to do so).
  [mbaechtold]


1.1.2 (2016-04-11)
------------------

- Fix the link in the RSS feed (link to parent instead of the feed itself).
  [mbaechtold]

- The news listing block renders news items the same way as the news portlet
  and the news listing view.
  [mbaechtold]


1.1.1 (2016-03-04)
------------------

- Define individual scale for news listing block.
  Define default image for news listing block.
  [Kevin Bieri]


1.1.0 (2016-03-03)
------------------

- Implement accessibility support for archive portlet tree.
  [Kevin Bieri]

- Rework styling based on ftw.theming
  [Kevin Bieri]

- get_creator should no fail if the user no longer exists.
  [mathias.leimgruber]

- Eliminate declaration warning for nonexistent methods.
  [jone]

- Do not show ftw.news.News in navigation by default.
  [elioschmutz]

- Apply styling based on new ftw.theming variables set.
  - Remove `read more` link becuase the link of the heading has the same target
    so the `read more` link is obsolete.
  [Kevin Bieri]

- Implement newslistingblock listing styles + Convert to html list. This has now the same styles as the regular newslisting.
  [mathias.leimgruber]

- Implement news portlet styles.
  [mathias.leimgruber]

- Implement news listing styles.
  [mathias.leimgruber]
